--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -357,28 +357,33 @@ font-size: 18px;
 <th></th>
 <th>Slides</th>
 <th>Videos</th>
+<th>Application Exercises (AE)</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/01-welcome.html#1">Welcome to STA 210!</a></td>
-<td>Welcome to STA 210!</td>
+<td><a href="https://warpwire.duke.edu/w/uyAEAA/">Welcome to STA 210!</a></td>
+<td><a href="https://sta210-fa20.netlify.app/appex/01-intro.html">Live lecture slides</a></td>
 </tr>
 <tr>
 <td></td>
 <td></td>
 <td><a href="https://warpwire.duke.edu/w/8R4EAA/">Tour of website + Sakai</a></td>
+<td><a href="https://sta210-fa20.netlify.app/appex/01-movies.html">Movie Revenues</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Data anlaysis + modeling]</td>
+<td>Data analysis + modeling</td>
 <td>Data analysis</td>
+<td></td>
 </tr>
 <tr>
 <td></td>
 <td></td>
 <td>RMarkdown + Git</td>
+<td></td>
 </tr>
 </tbody>
 </table>
@@ -423,8 +428,8 @@ font-size: 18px;
 <td><strong>due Wed, Aug 19 at 11:59p</strong></td>
 </tr>
 <tr>
-<td>Complete Getting to know you survey</td>
-<td></td>
+<td>Complete <a href="https://duke.qualtrics.com/jfe/form/SV_40BHXPlGnAiT01f">Get to know you survey</a></td>
+<td><strong>due Wed, Aug 19 at 11:59p</strong></td>
 </tr>
 <tr>
 <td>Lab 01 (assigned Thursday)</td>
