--- a/static/slides/01-welcome.html
+++ b/static/slides/01-welcome.html
@@ -20,10 +20,6 @@ class: center, middle, inverse, title-slide
 
 
 
-class: middle, center 
-
----
-
 class: center, middle
 
 # Welcome!
@@ -42,13 +38,24 @@ class: center, middle
 
 ### You will learn...
 
+--
+
 - How to apply methods for analyzing multivariate datasets, with an emphasis on interpretation
 
-- How to check whether a proposed statistical model is appropriate for the given data 
+--
+
+- How to check whether a proposed statistical model is 
+appropriate for the given data 
+
+--
 
 - How to address complex research questions using regression analysis
 
+--
+
 - How to use R and Git to do statistical analysis in a reproducible way 
+
+--
 
 - The process for conducting data-driven research by applying the methods from this course to a long-term project
 
