--- a/static/appex/01-intro.html
+++ b/static/appex/01-intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Welcome to Regression Analysis!</title>
+    <title>Welcome to STA 210!</title>
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Maria Tackett" />
     <link rel="stylesheet" href="sta210-slides.css" type="text/css" />
@@ -10,7 +10,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Welcome to Regression Analysis!
+# Welcome to STA 210!
 ### Prof. Maria Tackett
 
 ---
@@ -20,9 +20,54 @@ class: center, middle, inverse, title-slide
 
 
 
-class: center, middle
+### How are you feeling right now?
 
-# Welcome!
+&lt;br&gt;
+
+.center[
+.col-3[
+
+&lt;font class = "large-emoji"&gt;
+1) 🙂 
+&lt;/font&gt;
+
+
+&lt;br&gt;
+&lt;br&gt;
+
+&lt;font class = "large-emoji"&gt;
+4) 🤓
+&lt;/font&gt;
+]
+
+.col-3[
+
+&lt;font class = "large-emoji"&gt;
+2) 😆
+&lt;/font&gt;
+
+&lt;br&gt;
+&lt;br&gt;
+
+&lt;font class = "large-emoji"&gt;
+5) 🙁
+&lt;/font&gt;
+
+]
+
+.col-3[
+&lt;font class = "large-emoji"&gt;
+3) 😴
+&lt;/font&gt;
+
+&lt;br&gt;
+&lt;br&gt;
+
+&lt;font class = "large-emoji"&gt;
+6) 😎
+&lt;/font&gt;
+]
+]
 
 ---
 
@@ -31,69 +76,134 @@ class: center, middle
 "In statistical modeling, regression analysis is a set of statistical processes for estimating the relationships among variables. It includes many techniques for modeling and analyzing several variables, when &lt;font class="vocab"&gt;**the focus is on the relationship between a dependent variable and one or more independent variables (or 'predictors')**&lt;/font&gt;. More specifically, regression analysis helps one understand how the typical value of the dependent variable (or 'criterion variable') changes when any one of the independent variables is varied, while the other independent variables are held fixed."
 
 .pull-right[
-[-Wikipedia](https://en.wikipedia.org/wiki/Regression_analysis)
+- [Wikipedia](https://en.wikipedia.org/wiki/Regression_analysis)
 ]
 
 ---
 
-### You will learn...
+### Can I get a job that uses regression?
+
+&lt;img src="img/01/nyt_job.JPG" width="90%" style="display: block; margin: auto;" /&gt;
+
+
+[NYT Staff Editor - Statistical Modeling](https://nytimes.wd5.myworkdayjobs.com/en-US/News/job/New-York-NY/Staff-Editor---Statistical-Modeling_REQ-006725)
+
+---
+
+&lt;img src="img/01/nyt_requirements.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+&lt;br&gt;&lt;br&gt;
+[NYT Staff Editor - Statistical Modeling](https://nytimes.wd5.myworkdayjobs.com/en-US/News/job/New-York-NY/Staff-Editor---Statistical-Modeling_REQ-006725)
+
+---
+
+## Examples of regression anlaysis 
+
+- [New Yorkers Will Pay $56 A Month To Trim A Minute Off Their Commute](https://fivethirtyeight.com/features/new-yorkers-will-pay-56-a-month-to-trim-a-minute-off-their-commute/)
+
+- [How FiveThirtyEight’s 2020 Presidential Forecast Works — And What’s Different Because Of COVID-19](https://fivethirtyeight.com/features/how-fivethirtyeights-2020-presidential-forecast-works-and-whats-different-because-of-covid-19/)
+
+- [Effect of Forensic Evidence on Criminal Justice Case Processing](https://onlinelibrary.wiley.com/doi/10.1111/1556-4029.12020)
+
+- [Why it's so freaking hard to make a good COVID-19 model](https://fivethirtyeight.com/features/why-its-so-freaking-hard-to-make-a-good-covid-19-model/)
+
+---
+
+### Instructor: Prof. Maria Tackett
+
+**Email**: [maria.tackett@duke.edu](mailto:maria.tackett@duke.edu)
 
 --
 
-- How to apply methods for analyzing multivariate datasets, with an emphasis on interpretation
+.pull-left[
+&lt;img src="img/01/capital-one-logo.jpg" width="75%" style="display: block; margin: auto;" /&gt;
+
+&lt;img src="img/01/fbi-fingerprint.jpg" width="75%" style="display: block; margin: auto;" /&gt;
+
+]
 
 --
 
-- How to check whether a proposed statistical model is 
-appropriate for the given data 
-
---
-
-- How to address complex research questions using regression analysis
-
---
-
-- How to use R and Git to do statistical analysis in a reproducible way 
-
---
-
-- The process for conducting data-driven research by applying the methods from this course to a long-term project
+.pull-right[
+&lt;img src="img/01/education.jpg" width="75%" style="display: block; margin: auto;" /&gt;
+]
 
 
 ---
 
-### Where to find information
+## Meet your classmates!
 
-.vocab[Course website]: [sta210-fa20.netlify.app](https://sta210-fa20.netlify.app/)
+(~ 7 minutes)
+
+- Go to a breakout room
+
+- Introduce yourself!
+  - Name
+  - Year
+  - What is something you're looking forward to this semester (either in this class or in general)?
+
+- I'll visit some of the breakout rooms.
+
+- *The breakout rooms are not recorded.*
+
+---
+
+## Practice with Zoom 
+
+--
+
+- Display your name (first and last name)
+
+--
+
+- Raise your hand 
+
+--
+
+- Reactions
+
+--
+
+- Chat
+
+--
+
+
+- Poll 
+
+--
+
+- Breakout rooms (not recorded)
+
+---
+
+### This semester, you will learn...
+
+- How to apply methods for analyzing multivariate datasets, with an emphasis on interpretation
+
+- How to check whether a proposed statistical model is appropriate for the given data 
+
+- How to address complex research questions using regression analysis
+
+- How to use R and Git to do statistical analysis in a reproducible way 
+
+- The process for conducting data-driven research by applying the methods from this course to a long-term project
+
+---
+
+## Where to find information
+
+**Course Website**: [sta210-fa20.netlify.app/](https://sta210-fa20.netlify.app/)
   - Central hub for the course!
 
-.vocab[Sakai]
+**Sakai**
   - Gradebook
   - Class videos
   - Link to class meetings on Zoom
   
   
-.vocab[GitHub]: [https://github.com/sta210-fa20](https://github.com/sta210-fa20)
+**GitHub**:  [https://github.com/sta210-fa20](https://github.com/sta210-fa20)
   - Assignment repos (we'll talk more about that later)
-
----
-
-## Class meetings 
-
---
-
-.vocab[Lecture]
-- Focus on concepts behind data analysis
-- Has two components:
-  - **Lecture content videos** to watch before we meet
-  - **Live lecture session** to ask questions and apply concepts from videos
-
---
-
-.vocab[Lab]
-- Focus on computing using R
-- Apply concepts from lecture to case study scenarios
-- Work on labs individually or in teams of 3 - 4
 
 ---
 
@@ -109,7 +219,7 @@ appropriate for the given data
 
 --
 
-- .vocab[Quizzes]: Four quizzes to assess learning.
+- .vocab[Quizzes]: Four quizzes.
 
 --
 
@@ -141,38 +251,84 @@ appropriate for the given data
 
 ---
 
-## Academic Resource Center
+## Lectures
 
-The [Academic Resource Center (ARC)](https://arc.duke.edu/) offers free services to all students during their undergraduate careers at Duke. 
+- Focus on concepts behind data analysis
 
-Services include 
-  - Learning Consultations
-  - Peer Tutoring and Study Groups
-  - ADHD/LD Coaching, Outreach Workshops
-  - and more. 
-
+- Has two components:
+  - **Lecture content videos** to watch before we meet
+  - **Live lecture session** to ask questions and apply concepts from videos by working on exercises in small groups. 
   
-Contact the ARC at [ARC@duke.edu](mailto:arc@duke.edu) or call 919-684-5917 to schedule an appointment. 
+- Ask questions by "raising your hand" or posting them in the chat. 
+
+- I encourage you to use your video if you are comfortable. 
 
 ---
 
-## CAPS
+## Course community 
 
-[Duke Counseling &amp; Psychological Services (CAPS)](https://studentaffairs.duke.edu/caps) helps Duke Students enhance strengths and develop abilities to successfully live, grow and learn in their personal and academic lives. 
+--
 
-Services include 
-- brief individual and group counseling
-- couples counseling
-- outreach to student groups
-- and more...
+- Uphold the Duke Community Standard: 
+&gt; - I will not lie, cheat, or steal in my academic endeavors;
+&gt;- I will conduct myself honorably in all my endeavors; and
+&gt; - I will act if the Standard is compromised.
 
-Services provided via Telehealth. To initiate services, you can contact their front desk at 919-660-1000.
+--
+
+- Respect, honor, and celebrate our diverse community 
+
+--
+
+- Learning environment that is welcoming and accessible to everyone
+
+--
+
+
+---
+
+class: middle, center
+
+## Your Turn!
+
+---
+
+## Create a GitHub account
+
+.instructions[
+Go to https://github.com/, and create an account (unless you already have one). 
+
+After you create your account, go to [https://bit.ly/sta210-github](https://bit.ly/sta210-github) and enter your Duke email address (NETID@duke.edu) and GitHub username. 
+]
+
+&lt;small&gt;
+Some tips from [Happy Git with R](http://happygitwithr.com/github-acct.html#username-advice).
+&lt;/small&gt;
+
+- &lt;small&gt;Incorporate your actual name!&lt;/small&gt;
+- &lt;small&gt; Reuse your username from other contexts if you can, e.&lt;small&gt; g., Twitter or Slack.&lt;/small&gt;
+- &lt;small&gt; Pick a username you will be comfortable revealing to your future boss.&lt;/small&gt;
+- &lt;small&gt; Be as unique as possible in as few characters as possible. Shorter is better than longer.&lt;/small&gt;
+- &lt;small&gt; Make it timeless.&lt;/small&gt;
+- &lt;small&gt; Avoid words with special meaning in programming (e.g. `NA`).&lt;/small&gt;
+
+---
+
+## Let's look at an analysis! 
+
+- Read through the [Movie Data Analysis](https://sta210-fa20.netlify.app/appex/01-movies.html) 
+
+- Talk about the questions under the "Discussion" section in your breakout rooms. 
+
+- We'll choose a few rooms to share their conclusions. 
 
 ---
 
 class: middle, center
 
 [sta210-fa20.netlify.app](https://sta210-fa20.netlify.app)
+
+Look under "Week 01" for this week's assignments.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
