--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -375,14 +375,14 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Data analysis + modeling</td>
-<td>Data analysis</td>
+<td>[Motivating regression]</td>
+<td>Motivating regression</td>
 <td></td>
 </tr>
 <tr>
 <td></td>
-<td></td>
-<td>RMarkdown + Git</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/02-meet-toolkit.html">Meet the Toolkit</a></td>
+<td><a href="https://warpwire.duke.edu/w/RSwEAA/">Meet the Toolkit</a></td>
 <td></td>
 </tr>
 </tbody>
