--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -375,7 +375,7 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>[Motivating regression]</td>
+<td>Motivating regression</td>
 <td>Motivating regression</td>
 <td></td>
 </tr>
