--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -375,8 +375,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Motivating regression</td>
-<td>Motivating regression</td>
+<td>Data analysis + modeling</td>
+<td>Data analysis + modeling</td>
 <td></td>
 </tr>
 <tr>
