--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -365,6 +365,30 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Aug 19</td>
+            <td style="width:40%;text-align:left">Meet the toolkit</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/02-meet-toolkit.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
             <td style="width:40%;text-align:left">Data analysis + modeling</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
