--- a/static/slides/02-motivate-regression.html
+++ b/static/slides/02-motivate-regression.html
@@ -42,10 +42,10 @@ glimpse(advertising)
 ```
 ## Rows: 200
 ## Columns: 4
-## $ tv        &lt;dbl&gt; 230.1, 44.5, 17.2, …
-## $ radio     &lt;dbl&gt; 37.8, 39.3, 45.9, 4…
-## $ newspaper &lt;dbl&gt; 69.2, 45.1, 69.3, 5…
-## $ sales     &lt;dbl&gt; 22.1, 10.4, 9.3, 18…
+## $ tv        &lt;dbl&gt; 230.1, 44.5, 17.2, 151.5, 180.8, 8.7, 57.5, 120.2, 8.6, 199…
+## $ radio     &lt;dbl&gt; 37.8, 39.3, 45.9, 41.3, 10.8, 48.9, 32.8, 19.6, 2.1, 2.6, 5…
+## $ newspaper &lt;dbl&gt; 69.2, 45.1, 69.3, 58.5, 58.4, 75.0, 23.5, 11.6, 1.0, 21.2, …
+## $ sales     &lt;dbl&gt; 22.1, 10.4, 9.3, 18.5, 12.9, 7.2, 11.8, 13.2, 4.8, 10.6, 8.…
 ```
 
 --
@@ -169,24 +169,24 @@ What is the relationship between spending on TV ads an sales after accounting fo
 
 .pull-left[
 
-- **Unit 1: Quantitative Response Variables**
-    - Simple Linear Regression 
-    - Multiple Linear Regression
+.vocab[Unit 1: Quantitative Response Variables]
+  - Simple Linear Regression 
+  - Multiple Linear Regression
 
 &lt;br&gt; 
 
-- **Unit 3: Looking Ahead**
-    - Weighted least squares
-    - Dealing with messy data
-    - Modeling in practice
+.vocab[Unit 3: Looking Ahead]
+  - Weighted least squares
+  - Dealing with messy data
+  - Modeling in practice
 
 ]
 
 .pull-right[
 
-- **Unit 2: Categorical Response Variable**
-    - Logistic Regression 
-    - Multinomial Logistic Regression 
+- .vocab[Unit 2: Categorical Response Variable]
+  - Logistic Regression 
+  - Multinomial Logistic Regression 
 
 ]
     </textarea>
