--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -375,8 +375,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Data analysis + modeling</td>
-<td>Data analysis + modeling</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/02-motivate-regression.html">Motivating regression</a></td>
+<td>Motivating regression</td>
 <td></td>
 </tr>
 <tr>
