--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -389,11 +389,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right"></td>
-            <td style="width:40%;text-align:left">Data analysis + modeling</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Motivating regression</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/02-motivate-regression.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas file-code fa-lg"></i></font>
