--- a/public/slides/02-motivate-regression.html
+++ b/public/slides/02-motivate-regression.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Data analysis + modeling</title>
+    <title>Movtivating regression</title>
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Maria Tackett" />
     <link rel="stylesheet" href="sta210-slides.css" type="text/css" />
@@ -10,7 +10,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Data analysis + modeling
+# Movtivating regression
 ### Prof. Maria Tackett
 
 ---
@@ -42,10 +42,10 @@ glimpse(advertising)
 ```
 ## Rows: 200
 ## Columns: 4
-## $ tv        &lt;dbl&gt; 230.1, 44.5, 17.2, 151.5, 180.8, 8.7, 57.5, 120.2, 8.6, 199…
-## $ radio     &lt;dbl&gt; 37.8, 39.3, 45.9, 41.3, 10.8, 48.9, 32.8, 19.6, 2.1, 2.6, 5…
-## $ newspaper &lt;dbl&gt; 69.2, 45.1, 69.3, 58.5, 58.4, 75.0, 23.5, 11.6, 1.0, 21.2, …
-## $ sales     &lt;dbl&gt; 22.1, 10.4, 9.3, 18.5, 12.9, 7.2, 11.8, 13.2, 4.8, 10.6, 8.…
+## $ tv        &lt;dbl&gt; 230.1, 44.5, 17.2, …
+## $ radio     &lt;dbl&gt; 37.8, 39.3, 45.9, 4…
+## $ newspaper &lt;dbl&gt; 69.2, 45.1, 69.3, 5…
+## $ sales     &lt;dbl&gt; 22.1, 10.4, 9.3, 18…
 ```
 
 --
@@ -104,32 +104,14 @@ Each line represents model we could use to predict `sales` using `tv`, `radio`, 
 `$$\text{sales} = f(\text{tv}, \text{radio}, \text{newspaper}) + \epsilon$$`
 ]
 
-- **Goal**: Estimate `\(f\)`
+- **Goal**: Define `\(f\)`
 
 --
 
-- How do we estimate `\(f\)`?
-
---
-
-    - &lt;font class="vocab"&gt;Non-parametric methods:&lt;/font&gt; estimate `\(f\)` by getting as close to the data points as possible without making explicit assumptions about the functional form of `\(f\)`
+- How do we define `\(f\)`?
+  - Make an assumption about the functional form `\(f\)`
+  - Use the data to fit a model based on that form 
     
---
-
-    - &lt;font class="vocab"&gt;Parametric methods:&lt;/font&gt; estimate `\(f\)` by making an assumption about the functional form of `\(f\)` then using the data to fit a model based on that form 
-    
----
-
-class: middle, center
-
-.alert[
-In this class, we will focus on &lt;font class="vocab"&gt;parametric methods&lt;/font&gt;
-]
-
-&lt;small&gt;
-*Non-parametric methods covered in STA 325: Machine Learning &amp; Data Mining*
-&lt;/small&gt;
-
 ---
 
 ## General form of model
@@ -143,15 +125,14 @@ In this class, we will focus on &lt;font class="vocab"&gt;parametric methods&lt;
 - `\(\mathbf{X} = (X_1, X_2, \ldots, X_p)\)`: predictor variables
 
 - `\(f\)`: fixed but unknown function
-    - systematic information `\(\mathbf{X}\)` provides about `\(Y\)`
 
 - `\(\epsilon\)`: random error term with mean 0 that is independent of `\(\mathbf{X}\)` 
    
 ---
 
-## How to estimate `\(f\)`?
+## How to define `\(f\)`
 
-In general, we will use the following steps to estimate `\(f\)`
+In general, 
 
 1. Choose the functional form of `\(f\)`, i.e. &lt;font class="vocab"&gt;choose the appropriate model given the data&lt;/font&gt;
     - Ex: `\(f\)` is a linear model
@@ -160,136 +141,54 @@ In general, we will use the following steps to estimate `\(f\)`
 --
 
 2. Use the data to fit (or train) the model, i.e. &lt;font class="vocab"&gt;estimate the model parameters&lt;/font&gt;
-    - Ex: Use a method to estimate the model parameters `\(\beta_0, \beta_1, \ldots, \beta_p\)`
+    - Ex: Find estimates of `\(\beta_0, \beta_1, \ldots, \beta_p\)`
 
 ---
 
-## Why estimate `\(f\)`?
+## Why?
 
-Suppose we have the model
-
-`$$\text{sales} = \beta_0 + \beta_1 \times \text{tv} + \beta_2 \times \text{radio} + \beta_3 \times \text{newspaper} + \epsilon$$`
-&lt;br&gt;&lt;br&gt;&lt;br&gt;
-
---
-
-.question[
-What are 1-2 questions you could answer using this model?
+.alert[
+`$$\hat{\text{sales}} = \hat{\beta}_0 + \hat{\beta}_1 \times \text{tv} + \hat{\beta}_2 \times \text{radio} + \hat{\beta}_3 \times \text{newspaper}$$`
 ]
 
----
-
-## Why estimate `\(f\)`?
-
-There are two types of questions we may be interesting in answering with our model: 
-
-- &lt;font class="vocab"&gt;Prediction: &lt;/font&gt; What is the expected `\(Y\)`  given particular values of  `\(X_1, X_2, \ldots, X_p\)`? 
 --
 
-    - Ex: What is the expected `sales` in a market if the company spends $100,000 TV ads, $30,000 on radio ads, and $10,000 on newspaper ads?
+.vocab[Prediction:]
+
+What do we expect `sales` to be in a market where there is $100,000 spent on TV ads, $30,000 spent on radio ads, and $10,000 spent on newspaper ads?
 
 --
 
-- &lt;font class="vocab"&gt;Inference: &lt;/font&gt; What is the relationship between `\(\mathbf{X}\)` and `\(Y\)`. How does `\(Y\)` change as a function of `\(\mathbf{X}\)`?
---
+.vocab[Inference:]
 
-    - Ex: Which type of media advertising generates the largest boost in sales?
-
-
----
-
-## Prediction 
-
-`$$\hat{\text{sales}} = \hat{f}(\text{tv},\text{radio}, \text{newspaper})$$`
-
-- **Question**: How accurate is `\(\hat{\text{sales}}\)` as a prediction of `\(\text{sales}\)`?
-
-- This depends on two quantities: reducible and irreducible error
-
---
-    - &lt;font class="vocab"&gt;Reducible error:&lt;/font&gt; error that can potentially be reduced by using a model , `\(\hat{f}\)`, that is a more appropriate fit for the data
-
---
-    - &lt;font class="vocab"&gt;Irreducible error: &lt;/font&gt; Error that cannot be reduced even if the model, `\(\hat{f}\)`, is a perfect fit. In other words, this is variability associated with `\(\epsilon\)`
-
----
-
-class: middle, center
-
-.question[
-In the case of the `advertising` data, what types of factors are included in the irreducible error?
-]
-
----
-
-## Inference
-
-`$$\hat{\text{sales}} = \hat{f}(\text{tv},\text{radio}, \text{newspaper})$$`
-
-- **Question**: How is `sales` affected as `tv`, `radio`, and `newspaper` change?
---
-
-- We can break this into several questions: 
-
---
-    - What predictors are important for understanding sales? 
---
-    - What is the relationship between sales and each predictor? 
---
-    - Does the linear model adequately describe the relationship between `sales` and `tv`, `newspaper`, and `radio`, or is a more complex model required?
+What is the relationship between spending on TV ads an sales after accounting for spending on radio and newspaper ads?
 
 ---
 
 ## Course Outline
 
-- **Unit 1: Quantitative Response Variables**
-    - Simple Linear Regression 
-    - Multiple Linear Regression
-&lt;br&gt;&lt;br&gt;
---
+.pull-left[
 
-- **Unit 2: Categorical Response Variable**
-    - Logistic Regression 
-    - Multinomial Logistic Regression 
+.vocab[Unit 1: Quantitative Response Variables]
+  - Simple Linear Regression 
+  - Multiple Linear Regression
 
----
+&lt;br&gt; 
 
-## Course Outline
+.vocab[Unit 3: Looking Ahead]
+  - Weighted least squares
+  - Dealing with messy data
+  - Modeling in practice
 
-- **Unit 3: Modeling in Practice**
-    - Model Validation
-    - Dealing with messy data
-&lt;br&gt;&lt;br&gt;
---
+]
 
-- **Unit 4: Looking Ahead**
-    - Time Series 
-    - Other models? 
- 
----
+.pull-right[
 
-## Recap 
+- .vocab[Unit 2: Categorical Response Variable]
+  - Logistic Regression 
+  - Multinomial Logistic Regression 
 
-- We want to find the function that best fits the relationship between a response variable `\(Y\)` and some predictor variables `\(X_1, \ldots, X_p\)`
-
-- We will use **parametric** methods to find the function 
-    - Choose the appropriate model
-    - Estimate values of the model parameters
-
-- There are two main purposes for the model: 
-    - Prediction 
-    - Inference
-
----
-
-## Recap 
-
-Can you answer these questions? 
-
-**Motivating Regression Analysis**
-- Given `\(Y = f(\mathbf{X}) + \epsilon\)`
-    - What are the two basic steps for estimating `\(f\)`? 
-    - What are two possible reasons for estimating `\(f\)`?
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
