--- a/static/slides/02-motivate-regression.html
+++ b/static/slides/02-motivate-regression.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Data analysis + modeling</title>
+    <title>Movtivating regression</title>
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Maria Tackett" />
     <link rel="stylesheet" href="sta210-slides.css" type="text/css" />
@@ -10,7 +10,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Data analysis + modeling
+# Movtivating regression
 ### Prof. Maria Tackett
 
 ---
@@ -42,10 +42,10 @@ glimpse(advertising)
 ```
 ## Rows: 200
 ## Columns: 4
-## $ tv        &lt;dbl&gt; 230.1, 44.5, 17.2, 151.5, 180.8, 8.7, 57.5, 120.2, 8.6, 199…
-## $ radio     &lt;dbl&gt; 37.8, 39.3, 45.9, 41.3, 10.8, 48.9, 32.8, 19.6, 2.1, 2.6, 5…
-## $ newspaper &lt;dbl&gt; 69.2, 45.1, 69.3, 58.5, 58.4, 75.0, 23.5, 11.6, 1.0, 21.2, …
-## $ sales     &lt;dbl&gt; 22.1, 10.4, 9.3, 18.5, 12.9, 7.2, 11.8, 13.2, 4.8, 10.6, 8.…
+## $ tv        &lt;dbl&gt; 230.1, 44.5, 17.2, …
+## $ radio     &lt;dbl&gt; 37.8, 39.3, 45.9, 4…
+## $ newspaper &lt;dbl&gt; 69.2, 45.1, 69.3, 5…
+## $ sales     &lt;dbl&gt; 22.1, 10.4, 9.3, 18…
 ```
 
 --
