--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -376,7 +376,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/02-motivate-regression.html">Motivating regression</a></td>
-<td>Motivating regression</td>
+<td><a href="https://warpwire.duke.edu/w/RS0EAA/">Motivating regression</a></td>
 <td></td>
 </tr>
 <tr>
