--- a/public/home/band_three/index.html
+++ b/public/home/band_three/index.html
@@ -257,7 +257,7 @@ table tbody tr:nth-child(odd){
 <tr>
 <td>Instructor</td>
 <td><a href="mailto:maria.tackett@duke.edu">Prof. Maria Tackett</a></td>
-<td>TBD</td>
+<td>Wed 2p - 3p</td>
 </tr>
 <tr>
 <td>TA</td>
