add Wednesday AE

--- a/public/help/index.html
+++ b/public/help/index.html
@@ -253,6 +253,9 @@ table tbody tr:nth-child(odd){
 <li>
 <p><a href="https://moderndive.com/">Statistical Inference via Data Science: A ModernDive into R and the Tidyverse</a> by Chester Ismay and Albert Kim</p>
 </li>
+<li>
+<p><a href="http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf">Introduction to Statistical Learning</a> by Gareth James, Daniela Witten, Trevor Hastie, and Robert Tibshirani</p>
+</li>
 </ul>
 <h2 id="resources-for-mental-health-and-wellness">Resources for mental health and wellness</h2>
 <ul>
