--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -377,7 +377,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/02-motivate-regression.html">Motivating regression</a></td>
 <td><a href="https://warpwire.duke.edu/w/RS0EAA/">Motivating regression</a></td>
-<td></td>
+<td><a href="https://sta210-fa20.netlify.app/appex/02-rstudio-tour.html">Tour of RStudio + GitHub</a></td>
 </tr>
 <tr>
 <td></td>
