--- a/static/appex/02-rstudio-tour.html
+++ b/static/appex/02-rstudio-tour.html
@@ -437,7 +437,7 @@ x*7</code></pre>
 <pre class="r"><code>library(usethis)
 use_git_config(user.name = &quot;GitHub username&quot;, user.email=&quot;your email&quot;)</code></pre>
 <ul>
-<li><p>Open the RMarkdown file <strong>ae-02-ads-.Rmd</strong>. We will use that for the next part of class.</p></li>
+<li><p>Open the RMarkdown file <strong>ae-02-ads.Rmd</strong>. We will use that for the next part of class.</p></li>
 <li><p>Put your name for the author, then knit the document.</p></li>
 <li><p>Select <strong>all</strong> of the updated files in the Git pane, click to commit and write the commit message “Updated author name”.</p></li>
 <li><p>Click to push your changes.</p></li>
