--- a/static/labs/lab-01-practice-r.html
+++ b/static/labs/lab-01-practice-r.html
@@ -535,7 +535,7 @@ text-decoration: italic;
 <div id="clone-the-repo-start-new-rstudio-project" class="section level2">
 <h2>Clone the repo &amp; start new RStudio project</h2>
 <ul>
-<li>Go to the sta210-sp20 organization on GitHub (<a href="http://www.github.com/sta210-sp20" class="uri">http://www.github.com/sta210-sp20</a>). Click on the repo with the prefix <strong>lab-01-review-r-</strong>. It contains the starter documents you need to complete the lab.</li>
+<li>Go to the sta210-fa20 organization on GitHub (<a href="http://www.github.com/sta210-fa20" class="uri">http://www.github.com/sta210-fa20</a>). Click on the repo with the prefix <strong>lab-01-review-r-</strong>. It contains the starter documents you need to complete the lab.</li>
 </ul>
 <p>
 <span class="marginnote shownote"> <!--
