--- a/public/schedule/week-01/index.html
+++ b/public/schedule/week-01/index.html
@@ -432,7 +432,7 @@ font-size: 18px;
 <td><strong>due Wed, Aug 19 at 11:59p</strong></td>
 </tr>
 <tr>
-<td>Lab 01 (assigned Thursday)</td>
+<td><a href="https://sta210-fa20.netlify.app/labs/lab-01-practice-r.html">Lab 01</a></td>
 <td><strong>due Wed, Aug 26 at 11:59p</strong></td>
 </tr>
 <tr>
