--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -418,7 +418,7 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center"><a href="/labs/01-practice-r.html">
+            <td align="center" style="width:10%;text-align:center"><a href="/labs/lab-01-practice-r.html">
                     <i class="far fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
