--- a/static/labs/lab-01-practice-r.html
+++ b/static/labs/lab-01-practice-r.html
@@ -497,7 +497,7 @@ text-decoration: italic;
 
 
 <h1 class="title toc-ignore">Lab 01: Practice with R</h1>
-<h4 class="date">due Wed, August 26 at 11:59p</h4>
+<h3 class="subtitle">due Wed, August 26 at 11:59p</h3>
 
 
 <div id="TOC">
@@ -514,7 +514,7 @@ text-decoration: italic;
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <p><label for="tufte-mn-1" class="margin-toggle">⊕</label><input type="checkbox" id="tufte-mn-1" class="margin-toggle"><span class="marginnote"><span style="display: block;">R is the name of the programming language itself and RStudio is a convenient user interface.</span></span></p>
-<p>The main goal of this lab is to review the basics of R and RStudio. We will use these tools throughout this course to analyze and make conclusions from real-world data.</p>
+<p>The main goal of this lab is to practice a few basic functions of R and RStudio. We will use these tools throughout this course to analyze and make conclusions from real-world data.</p>
 <p><label for="tufte-mn-2" class="margin-toggle">⊕</label><input type="checkbox" id="tufte-mn-2" class="margin-toggle"><span class="marginnote"><span style="display: block;">git is a version control system (like “Track Changes” features from Microsoft Word but more powerful) and GitHub is the home for your Git-based projects on the internet (like DropBox but better).</span></span></p>
 <p>An additional goal is to introduce you to git and GitHub, which is the version control and collaboration system we will use throughout the course.</p>
 <p>As the labs progress, you are encouraged to explore beyond what the labs dictate; a willingness to experiment will make you a much better programmer and statistician. This lab is a brief review of the fundamental building blocks of R and RStudio: the interface, reading in data, and basic data wrangling and graphing functions. If you’re new to R or would like additional practice, there are resources listed at the end of the lab instructions.</p>
@@ -535,7 +535,7 @@ text-decoration: italic;
 <div id="clone-the-repo-start-new-rstudio-project" class="section level2">
 <h2>Clone the repo &amp; start new RStudio project</h2>
 <ul>
-<li>Go to the sta210-fa20 organization on GitHub (<a href="http://www.github.com/sta210-fa20" class="uri">http://www.github.com/sta210-fa20</a>). Click on the repo with the prefix <strong>lab-01-review-r-</strong>. It contains the starter documents you need to complete the lab.</li>
+<li>Go to the sta210-fa20 organization on GitHub (<a href="http://www.github.com/sta210-fa20" class="uri">http://www.github.com/sta210-fa20</a>). Click on the repo with the prefix <strong>lab-01-practice-r-</strong>. It contains the starter documents you need to complete the lab.</li>
 </ul>
 <p>
 <span class="marginnote shownote"> <!--
