PDF of intro and foundation slides

--- a/static/slides/03-slr-intro.html
+++ b/static/slides/03-slr-intro.html
@@ -20,6 +20,10 @@ class: center, middle, inverse, title-slide
 
 
 
+class: middle, center
+
+## [Click for PDF of slides](03-slr-intro.pdf)
+
 ---
 
 ## Topics 
