--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -332,12 +332,104 @@ table tbody tr:nth-child(odd){
         
       <div class="section">
         <div class="listItem learn-top-nav">
-          <div class="tutorial"><nav id="TableOfContents"></nav></div>
+          <div class="tutorial"><nav id="TableOfContents">
+  <ul>
+    <li><a href="#lectures">Lectures</a></li>
+    <li><a href="#readings">Readings</a></li>
+    <li><a href="#assignments">Assignments</a></li>
+    <li><a href="#announcements">Announcements</a></li>
+  </ul>
+</nav></div>
         </div>
       </div>
       
       <div class="article-content">
-      <p>Check back for details!</p>
+      <style>
+table {
+font-size: 18px;
+}
+
+</style>
+<h2 id="lectures">Lectures&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#lectures">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th>Slides</th>
+<th>Videos</th>
+<th>Application Exercises (AE)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Monday</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/03-slr-intro.html#1">Simple Linear Regression: Intro</a></td>
+<td>Simple Linear Regression: Intro</td>
+<td>AE 03</td>
+</tr>
+<tr>
+<td>Wednesday</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/04-slr-foundation.html">SLR: Foundation</a></td>
+<td>SLR: Foundation</td>
+<td>AE 04</td>
+</tr>
+<tr>
+<td></td>
+<td><a href="https://sta210-fa20.netlify.app/slides/04-slr-coef-inf.html">SLR: Inference</a></td>
+<td>SLR: Inference</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h2 id="readings">Readings&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#readings">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://arxiv.org/pdf/1903.07639.pdf">Elements and Principles for Characterizing Variation between Data Analyses</a></td>
+<td><strong>Required</strong></td>
+</tr>
+</tbody>
+</table>
+<h2 id="assignments">Assignments&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#assignments">🔗&#xFE0E;</a> </h2>
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://sta210-fa20.netlify.app/hw/hw-01.html">HW 01 (assigned Wed)</a></td>
+<td><strong>due Wed, Sep 2 at 11:59p</strong></td>
+</tr>
+<tr>
+<td>Lab 02</td>
+<td><strong>due Wed, Sep 2 at 11:59p</strong></td>
+</tr>
+</tbody>
+</table>
+<h2 id="announcements">Announcements&nbsp;<a class="hanchor" ariaLabel="Anchor" href="#announcements">🔗&#xFE0E;</a> </h2>
+<p>Computing workshops by the Center for Data and Visualization Sciences</p>
+<ul>
+<li><a href="https://duke.libcal.com/event/6867861">R for data science: getting started, EDA, data wrangling</a>
+<ul>
+<li>Tue, Sep 1, 10a - 12p</li>
+</ul>
+</li>
+<li><a href="https://duke.libcal.com/event/6867914">R for data science: visualization, pivot, join, regression</a>
+<ul>
+<li>Wed, Sep 9, 1p - 3p</li>
+</ul>
+</li>
+</ul>
+<p>Find a complete list of workshops <a href="https://library.duke.edu/data/workshops">here</a>.</p>
 
 
       </div>
