--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -462,10 +462,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right">Week 02</td>
             <td align="right" style="width:25%;text-align:right">Mon, Aug 24 </td>
             <td style="width:40%;text-align:left">Simple linear regression (SLR)</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/03-slr-intro.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -487,6 +486,54 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Aug 26</td>
             <td style="width:40%;text-align:left">SLR: Inference</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/04-slr-foundation.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left"></td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/04-slr-coef-inf.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left">HW 01 assigned</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -509,7 +556,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Aug 27</td>
-            <td style="width:40%;text-align:left">Lab 02</td>
+            <td style="width:40%;text-align:left">Lab 02: SLR</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
