--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -364,7 +364,7 @@ font-size: 18px;
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/03-slr-intro.html#1">Simple Linear Regression: Intro</a></td>
-<td>Simple Linear Regression: Intro</td>
+<td><a href="https://warpwire.duke.edu/w/izoEAA/">An Introduction to Simple Linear Regression</a></td>
 <td>AE 03</td>
 </tr>
 <tr>
@@ -390,6 +390,10 @@ font-size: 18px;
 </tr>
 </thead>
 <tbody>
+<tr>
+<td><a href="https://leanpub.com/openintro-statistics">OpenIntro Statistics: 8.1 - 8.4 </a> <br> (click &ldquo;Read Free Sample&rdquo; to access PDF)</td>
+<td><strong>Required</strong></td>
+</tr>
 <tr>
 <td><a href="https://arxiv.org/pdf/1903.07639.pdf">Elements and Principles for Characterizing Variation between Data Analyses</a></td>
 <td><strong>Required</strong></td>
