week 02 slides update

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -485,7 +485,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Aug 26</td>
-            <td style="width:40%;text-align:left">SLR: Inference</td>
+            <td style="width:40%;text-align:left">SLR: Foundation</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="/slides/04-slr-foundation.html">
                     <i class="fas fa-laptop fa-lg"></i></a></td>
@@ -509,7 +509,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right"></td>
-            <td style="width:40%;text-align:left"></td>
+            <td style="width:40%;text-align:left">SLR: Inference</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="/slides/04-slr-coef-inf.html">
                     <i class="fas fa-laptop fa-lg"></i></a></td>
