--- a/static/slides/04-slr-coef-inf.html
+++ b/static/slides/04-slr-coef-inf.html
@@ -381,7 +381,7 @@ class: middle, center
 &lt;br&gt; 
 
 .eq[
-`$$\text{p-value} = P(t \geq |\text{test statistic}|)$$`
+`$$\text{p-value} = P(|t| \geq |\text{test statistic}|)$$`
 ]
 
 Calculated from a `\(t\)` distribution with `\(n-2\)` degrees of freedom
@@ -444,7 +444,7 @@ Calculated from a `\(t\)` distribution with `\(n-2\)` degrees of freedom
 
 --
 
-The data provide sufficient evidence that the population slope `\(\beta_0\)` is different from 0. 
+The data provide sufficient evidence that the population slope `\(\beta_1\)` is different from 0. 
 
 .vocab[There is a linear relationship between the critics score and audience score for movies on rottentomatoes.com.]
 
@@ -453,7 +453,7 @@ The data provide sufficient evidence that the population slope `\(\beta_0\)` is 
 
 class: middle, center
 
-### What is a plausible range of values of values for the population slope `\(\beta_1\)`?
+### What is a plausible range of values for the population slope `\(\beta_1\)`?
 
 ---
 
