--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -365,7 +365,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/03-slr-intro.html#1">Simple Linear Regression: Intro</a></td>
 <td><a href="https://warpwire.duke.edu/w/izoEAA/">An Introduction to Simple Linear Regression</a></td>
-<td>AE 03</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-03-porsche.html">AE 03: Price of Porsches</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
