add wednesday videos

--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -370,13 +370,13 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/04-slr-foundation.html">SLR: Foundation</a></td>
-<td>SLR: Foundation</td>
+<td><a href="https://warpwire.duke.edu/w/hUUEAA/">SLR: Foundation</a></td>
 <td>AE 04</td>
 </tr>
 <tr>
 <td></td>
 <td><a href="https://sta210-fa20.netlify.app/slides/04-slr-coef-inf.html">SLR: Inference</a></td>
-<td>SLR: Inference</td>
+<td><a href="https://warpwire.duke.edu/w/e0UEAA/">SLR: Inference</a></td>
 <td></td>
 </tr>
 </tbody>
