--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -259,7 +259,7 @@ table tbody tr:nth-child(odd){
 <p><strong>TL;DR: Don&rsquo;t cheat!</strong></p>
 <p>Please abide by the following as you work on assignments in this course:</p>
 <ul>
-<li>You may not discuss or otherwise work with others on the exams. Unauthorized collaboration or using unauthorized materials will be considered a violation for all students involved. More details will be given closer to the exam date.</li>
+<li>You may not discuss or otherwise work with others on the quizzes. Unauthorized collaboration or using unauthorized materials will be considered a violation for all students involved. More details will be given closer to the exam date.</li>
 <li><strong>Reusing code</strong>: Unless explicitly stated otherwise, you may make use of online resources (e.g. StackOverflow) for coding examples on assignments. If you directly use code from an outside source (or use it as inspiration), you must explicitly cite where you obtained the code. Any recycled code that is discovered and is not explicitly cited will be treated as plagiarism.</li>
 <li>On individual assignments, you may not directly share code or write up with other students. On team assignments, you may not directly share code or write up with another team. Unauthorized sharing of the code or write up will be considered a violation for all students involved.</li>
 </ul>
