--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -371,7 +371,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/04-slr-foundation.html">SLR: Foundation</a></td>
 <td><a href="https://warpwire.duke.edu/w/hUUEAA/">SLR: Foundation</a></td>
-<td>AE 04</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-04-porsche-inf.html">AE 04: Price of Porsches (Inference)</a></td>
 </tr>
 <tr>
 <td></td>
