--- a/public/slides/04-slr-coef-inf.html
+++ b/public/slides/04-slr-coef-inf.html
@@ -23,7 +23,7 @@ class: center, middle, inverse, title-slide
 
 class: middle, center
 
-## [Click for PDF of slides](04-coef-inf.pdf)
+## [Click for PDF of slides](04-slr-coef-inf.pdf)
 
 
 ---
