--- a/public/hw/hw-01.html
+++ b/public/hw/hw-01.html
@@ -1363,19 +1363,11 @@ src: local('Source Code Pro Regular'), local('SourceCodePro-Regular'), url(data:
 
 body {
 font-family: 'Source Sans Pro', sans-serif;
-font-weight: 350;
+font-weight: 400;
 background-color: #fefefe;
 color: #222;
 counter-reset: li;
 font-size: 16px;
-}
-p {
-font-size: 16px;
-font-weight: 350;
-}
-li {
-font-size: 16px;
-font-weight: 350;
 }
 h1.title {
 font-weight: 700;
@@ -1429,7 +1421,7 @@ font-family: "Source Sans Pro";
 @media screen and (max-width: 760px) {
 pre {
 width: 100%;
-font-size: 16px;
+font-size: 15px;
 overflow-x: auto;
 }
 }
@@ -1758,7 +1750,7 @@ library(knitr)</code></pre>
 <div id="part-2-analysis-in-practice" class="section level2">
 <h2>Part 2: Analysis in Practice</h2>
 <p>Read the 2016 FiveThirtyEight article <a href="https://fivethirtyeight.com/features/new-yorkers-will-pay-56-a-month-to-trim-a-minute-off-their-commute/">“New Yorkers Will Pay $56 A Month To Trim A Minute Off Their Commute”</a> by Carl Bialik.</p>
-<p>Rank each of the following principles from <a href="https://arxiv.org/pdf/1903.07639.pdf">Elements and Principles for Characterizing Variation between Data Analyses</a> for the FiveThirtyEight article. Use a scale of 1 - 5. Include a 1 - 2 sentence summary for each principle.</p>
+<p>Rank each of the following principles from <a href="https://arxiv.org/pdf/1903.07639.pdf">Elements and Principles for Characterizing Variation between Data Analyses</a> for the FiveThirtyEight article. Use a scale of 1 - 5, where 1 means the principle has not been applied and 5 means the principle has been fully applied. Include a 1 - 2 sentence summary for each principle.</p>
 <ul>
 <li>data matching:</li>
 <li>exhaustive:</li>
