--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -410,11 +410,11 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td><a href="https://sta210-fa20.netlify.app/hw/hw-01.html">HW 01 (assigned Wed)</a></td>
+<td><a href="https://sta210-fa20.netlify.app/hw/hw-01.html">HW 01</a></td>
 <td><strong>due Wed, Sep 2 at 11:59p</strong></td>
 </tr>
 <tr>
-<td>Lab 02</td>
+<td><a href="https://sta210-fa20.netlify.app/labs/lab-02-slr.html">Lab 02</a></td>
 <td><strong>due Wed, Sep 2 at 11:59p</strong></td>
 </tr>
 </tbody>
