--- a/static/hw/hw-01.html
+++ b/static/hw/hw-01.html
@@ -1428,7 +1428,7 @@ overflow-x: auto;
 code {
 font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
 font-size: 16px;
-line-height: 1.6;
+
 }
 pre {
 background-color: #FFFFFF;
@@ -1741,7 +1741,7 @@ library(knitr)</code></pre>
 </ul></li>
 <li><p>Interpret the slope in the context of the data.</p></li>
 <li><p>Does it make sense to interpret the intercept? If so, write the interpretation in the context of the data. Otherwise, briefly explain why not.</p></li>
-<li><p>Calculate the 95% confidence interval for the slope, <span class="math inline">\(\beta_1\)</span>.</p></li>
+<li><p>Calculate the 95% confidence interval for the slope, <span class="math inline">\(\beta_1\)</span>. Show the steps of the calculation, e.g. don’t just print the confidence interval in the <code>lm</code> output.</p></li>
 <li><p>Interpret the confidence interval from the previous question in the context of the data.</p></li>
 <li><p>Based on this analysis, is the number of calories a useful predictor of the amount of carbohydrates in food items at Starbucks? Briefly explain why or why not.</p></li>
 </ol>
