--- a/static/labs/lab-02-slr.html
+++ b/static/labs/lab-02-slr.html
@@ -413,8 +413,8 @@ overflow-x: auto;
 }
 code {
 font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-font-size: 16px;
-
+font-size: 17px;
+line-height: 1.6;
 }
 pre {
 background-color: #FFFFFF;
@@ -525,11 +525,11 @@ text-decoration: italic;
 </div>
 <div id="getting-started" class="section level1">
 <h1>Getting Started</h1>
-<p>Each of your assignments will begin with the steps outlined in this section. For more detailed instructions about getting started, see the <a href="https://sta210-fa20.netlify.app/labs/lab-01-practice-r.html">Lab 01 instructions</a></p>
+<p>Each of your assignments will begin with the steps outlined in this section. For more detailed instructions about getting started, see the <a href="https://sta210-fa20.netlify.app/labs/lab-01-practice-r.html">Lab 01 instructions</a>.</p>
 <div id="clone-the-repo-start-new-rstudio-project" class="section level2">
 <h2>Clone the repo &amp; start new RStudio project</h2>
 <ul>
-<li><p>Go to the sta210-fa20 organization on GitHub (<a href="http://www.github.com/sta210-fa20" class="uri">http://www.github.com/sta210-fa20</a>). Click on the repo with the prefix <strong>lab-02-slr-</strong>. It contains the starter documents you need to complete the lab.</p></li>
+<li><p>Go to the <a href="http://www.github.com/sta210-fa20">sta210-fa20 organization</a> on GitHub . Click on the repo with the prefix <strong>lab-02-slr-</strong>. It contains the starter documents you need to complete the lab.</p></li>
 <li><p>Click on the green <strong>Code</strong> button, select <strong>Use HTTPS</strong>. Click on the clipboard icon to copy the repo URL.</p></li>
 <li><p>Go to <a href="https://vm-manage.oit.duke.edu/containers" class="uri">https://vm-manage.oit.duke.edu/containers</a> and login with your Duke NetId and Password.</p></li>
 <li><p>Click to log into the Docker container <strong>STA 210 - Regression Analysis</strong>. You should now see the RStudio environment.</p></li>
@@ -643,7 +643,7 @@ text-decoration: italic;
 <li><p>Fit a model of <code>Hwt</code> vs. <code>Bwt</code>for <strong>female</strong> cats. Display the 95% confidence interval for the slope using by including <code>conf.int = TRUE</code> in the <code>tidy</code> function.</p>
 <p>Interpret the interval in the context of the data.</p></li>
 <li><p>Fit a model of <code>Hwt</code> vs. <code>Bwt</code> for <strong>male</strong> cats. Display the 95% confidence interval for the slope using by including <code>conf.int = TRUE</code> in the <code>tidy</code> function.</p></li>
-<li><p>Does the data provide evidence that the slope is significantly different for male and female cats? Briefly explain. <em>Hint: Compare the confidence intervals.</em></p></li>
+<li><p>Does the data provide sufficient evidence that the slope is significantly different for male and female cats? Briefly explain. <em>Hint: Compare the confidence intervals.</em></p></li>
 </ol>
 <div class="commit">
 <p>✅ ⬆️ Knit, commit and push your changes to GitHub with an appropriate commit message again. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.</p>
